fixed a bug with z-indexing preventing the user from clicking the update time button

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ article p {
 }
 
 #updatetime {
+    position: relative;
     text-decoration: none;
     background-color: #00f;
     border: none;
@@ -167,7 +168,7 @@ footer {
     top: 0;
     height: 100%;
     width: 100%;
-    z-index: 1;
+    z-index: 10;
     border: 0;
     padding: 0;
     background-color: transparent;
